# ComputerGraphics

./: .gitignore
2D_Transformations/src/: main.py  main_animation.py
2D_Transformations/src/base/: arc.py  arrow.py  axes.py  broken_line.py  lines.py  points.py  poligon.py  text.py
2D_Transformations/src/math/: Mat3x3.py  Mat4x4.py  Quaternion.py  Rotations.py  Translation.py  Vec3.py  Vec4.py  debug_decompose.py  utils.py  utils_matrix.py  utils_quat.py
2D_Transformations/src/samples/: comut.py  coord_frame.py  test_pivot.py
2D_Transformations/tasks/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_12.py  task_13.py  task_14.py
3D_Transformations/src/: main.py  main_animation.py
3D_Transformations/src/base/: axes.py  broken_line.py  points.py  poligon.py  text.py
3D_Transformations/src/math/: Mat3x3.py  Mat4x4.py  Quaternion.py  Rotations.py  Scale.py  Translation.py  Vec3.py  Vec4.py  utils.py  (+2 more)
3D_Transformations/tasks/: task_01.py  task_02.py  task_03.py  task_04.py  task_05.py  task_06.py  task_07.py  task_08.py  task_09.py  task_10.py  task_11.py  task_13.py  task_15.py
Homework02_3/: CMakeLists.txt
Homework02_3/src/TexturedRectangles/: main.cpp
Homework02_3/src/TexturedRectangles/res/shaders/: rect.frag  rect.vert
Homework02_3/src/TexturedSquareAnimation/: main.cpp
Homework02_3/src/utils/: shader_utils.cpp  shader_utils.h  texture.cpp  texture.h
OpenGL_Start/: CMakeLists.txt
OpenGL_Start/src/: main.cpp
OpenGL_Start/src/task_02/: main.cpp
(+117 files in other folders)
